--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "TNM084",
+  "name": "three-npm",
   "version": "1.0.0",
-  "description": "Project for TNM084 - Procedural images",
+  "description": "",
   "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/arnessonpontus/TNM084.git"
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack-dev-server --mode development",
+    "format": "prettier --write '**/*.js'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/arnessonpontus/TNM084/issues"
+  "dependencies": {
+    "three": "^0.115.0"
   },
-  "homepage": "https://github.com/arnessonpontus/TNM084#readme"
+  "devDependencies": {
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
